Istio/03-Sidecar/__02-egress-proxy-forwarding/02-deployment_2.yaml
## https://github.com/istio/istio/blob/master/samples/helloworld/helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal
  labels:
    app: internal
  namespace: foo
spec:
  ports:
    - port: 8080
      name: http
    - port: 80
      name: http-default
  selector:
    app: internal

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal
  labels:
    app: internal
  namespace: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internal
  template:
    metadata:
      labels:
        app: internal
        service: apache
    spec:
      containers:
        - name: internal
          image: httpd
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 80
