Istio/03-Sidecar/__02-egress-proxy-forwarding/03-default-sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: root-default
#  namespace: default
  namespace: istio-system
spec:
#  workloadSelector:
#    labels:
#      app: helloworld
  egress:
    - hosts:
        - "./*"
#        - "istio-system/*"
#  ingress:
#    - port:
#        number: 8080
#        protocol: HTTP
#        name: ingressport
#      defaultEndpoint: 127.0.0.1:80
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: helloworld-default
  namespace: default
#  namespace: istio-system
spec:
  #  workloadSelector:
  #    labels:
  #      app: helloworld
#  egress:
#    - port:
#        number: 8080
#        protocol: HTTP
#        name: egresshttp
##        - "internal.foo.svc.cluster.local"
#      hosts:
#        - "foo/*"
#    - hosts:
#        - "istio-system/*"
  ingress:
    - port:
        number: 8080
        protocol: HTTP
        name: ingressport
      defaultEndpoint: 127.0.0.1:80
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: internal-default
  namespace: foo
spec:
  workloadSelector:
    labels:
      app: internal
  egress:
    - hosts:
        - "./*"
        - "istio-system/*"
        #- "wikipedia.com"
  ingress:
#    - hosts:
#        - "./*"
#        - "istio-system/*"
    - port:
        number: 8080
        protocol: HTTP
        name: myingressport
      defaultEndpoint: 127.0.0.1:80
